# Time-Tracker-Backend

./: .gitignore  Cargo.toml  app.db  todo.md
src/: log.rs  main.rs
src/apiv1/: mod.rs
src/db/: device.rs  log.rs  mod.rs
