[package]
name = "Time-Tracker-Backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.9", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.9.0", features = [
    "runtime-tokio",
    "sqlite",
    "chrono",
    "migrate"
] }
serde = { version = "1", features = ["derive"] }
tracing-subscriber = "0.3"
tower-http = { version = "0.7.0", features = ["cors", "trace"] }
anyhow = "1.0.102"
