[package]
name = "Time-Tracker-Backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.9", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.9.0", features = [
    "runtime-tokio",
    "sqlite",
    "chrono",
    "migrate",
    "uuid"
] }
serde = { version = "1", features = ["derive"] }
tower-http = { version = "0.7.0", features = ["cors"] }
anyhow = "1.0.102"
chrono = "0.4"
uuid = { version = "1", features = ["v4", "serde"] }
rand = "0.10.1"
base64 = "0.22.1"
sha2 = "0.11.0"
constant_time_eq = "0.5.0"
